# preca

./: .gitignore  README.md  pom.xml  requirements.txt
binsecplugin/concrete/: concrete_options.ml  concrete_options.mli  dune  dune-project  emuldba.ml  env.ml  env.mli  libconcrete.opam  perm.ml  perm.mli  splugin.ml
datasets/binaries/: AllNotNull  BZ2_hbAssignCodes  array_init_pair_symmetr  array_init_pair_symmetr_nopost  bzero  crypt_and_hash  custom  fact  fibo  find_first  gcd  glibc_memchr  glibc_memcmp  glibc_memfrob  glibc_memrchr  glibc_memset  glibc_strcat  glibc_strchr  glibc_strchrnul  glibc_strcmp  glibc_strcpy  glibc_strlen  glibc_strncmp  inc  maxvalue  memccpy  memcpy  memmem  memmove  mvswap  power  stclose  stpcpy  strcat  strcoll  strcpy  strcspn  strdup  strfry  strncat  (+15 more)
datasets/binaries/postcond/: array_init_pair_symmetr_patchedpost  fact  fibo  find_first  gcd  glibc_memchr  glibc_memcmp  glibc_memfrob  glibc_memrchr  glibc_memset  glibc_strchr  glibc_strchrnul  glibc_strcmp  glibc_strlen  glibc_strncmp  inc  maxvalue  memccpy  memcpy  memmem  memmove  power  stpcpy  strcat  strcoll  strcpy  strcspn  strdup  strfry  strncat  strncpy  strndup  strnlen  strpbrk  strrchr  strsep  strspn  strstr  strtok  strtok_r  (+4 more)
datasets/binsec_ini/mbed/: mbedtls_aes_crypt_cbc.ini  mbedtls_aes_setkey_dec.ini  mbedtls_aes_setkey_enc.ini  mbedtls_md_finish.ini  (+6 more)
examples/: strcat_conacq.txt  strcat_dca.txt
resources/: naps-1.02b  permissions.config
scripts/: bench.py  get_bias.py  launch_preca.sh  recompute_stats.py
scripts/lib/: __init__.py  utils.py
(+281 files in other folders)
